--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "koishi-plugin-sauce-aggregator",
-  "description": "简单的聚合搜图插件，目前支持saucenao，iqdb，trace.moe。添加yande.re, gelbooru图源支持。",
-  "version": "1.1.0",
+  "description": "聚合搜图插件. 目前支持saucenao, iqdb, trace.moe, yandex搜图; yande.re, gelbooru, danbooru图源. 添加ascii2d支持.",
+  "version": "1.5.0",
+  "homepage": "https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator",
+  "repository": {
+	"type": "git",
+	"url": "git+https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator.git"
+	},
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
@@ -18,7 +23,11 @@
     "sauce",
     "saucenao",
     "trace.moe",
-    "iqdb"
+    "iqdb",
+    "yandex",
+    "yande.re",
+    "gelbooru",
+    "danbooru"
   ],
   "peerDependencies": {
     "koishi": "^4.18.7"
@@ -26,6 +35,10 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "form-data": "^4.0.0",
-    "sharp": "^0.34.3"
-  }
+    "sharp": "^0.34.3",
+    "puppeteer-core": "^24.18.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-finder": "^1.1.1"
+    }
 }
