--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-sauce-aggregator",
   "description": "聚合搜图插件. 目前支持saucenao, iqdb, trace.moe, yandex搜图; yande.re, gelbooru, danbooru图源. 添加ascii2d支持.",
-  "version": "1.5.0",
+  "version": "1.5.2",
   "homepage": "https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator",
   "repository": {
 	"type": "git",
@@ -35,7 +35,7 @@
   "dependencies": {
     "cheerio": "^1.0.0",
     "form-data": "^4.0.0",
-    "sharp": "^0.34.3",
+    "pureimage": "^0.4.18",
     "puppeteer-core": "^24.18.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
