--- a/package.json
+++ b/package.json
@@ -1,22 +1,45 @@
 {
   "name": "koishi-plugin-sauce-aggregator",
-  "description": "测试",
-  "version": "0.0.1",
+  "description": "聚合以图搜图插件。目前支持6个常用搜图引擎搜索，4个图源获取原图。修复已知问题",
+  "version": "1.6.6",
+  "homepage": "https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator.git"
+  },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "files": [
-    "lib",
-    "dist"
+    "lib"
   ],
   "license": "MIT",
-  "scripts": {},
   "keywords": [
     "chatbot",
     "koishi",
-    "plugin"
+    "plugin",
+    "image",
+    "search",
+    "saucenao",
+    "trace.moe",
+    "iqdb",
+    "soutubot",
+    "yandex",
+    "yande.re",
+    "gelbooru",
+    "danbooru",
+    "pixiv"
   ],
-  "devDependencies": {},
   "peerDependencies": {
-    "koishi": "^4.18.7"
+    "koishi": "^4.18.0"
+  },
+  "dependencies": {
+    "@puppeteer/browsers": "^2.10.0",
+    "cheerio": "^1.1.2",
+    "form-data": "^4.0.4",
+    "puppeteer-core": "^24.19.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "puppeteer-finder": "^1.1.1",
+    "pureimage": "^0.4.18"
   }
 }
