--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-sauce-aggregator",
   "description": "聚合以图搜图以及图源链接解析。支持6个常用搜图引擎搜索，4个图源获取原图。",
-  "version": "1.7.12",
+  "version": "1.7.10",
   "homepage": "https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator",
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
   "dependencies": {
     "@puppeteer/browsers": "^2.10.0",
     "cheerio": "^1.1.2",
+    "got-scraping": "^4.1.2",
     "puppeteer-core": "^24.19.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
