--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koishi-plugin-sauce-aggregator",
   "description": "聚合以图搜图以及图源链接解析。支持6个常用搜图引擎搜索，4个图源获取原图。",
-  "version": "1.7.13",
+  "version": "1.7.14",
   "homepage": "https://github.com/YuzuharaYuka/koishi-plugin-sauce-aggregator",
   "repository": {
     "type": "git",
@@ -41,5 +41,11 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "puppeteer-finder": "^1.1.1",
     "pureimage": "^0.4.18"
+  },
+  "resolutions": {
+    "get-stream": "6.0.1"
+  },
+  "overrides": {
+    "get-stream": "6.0.1"
   }
 }
